--- a/portfolio-app/src/Public/styles/components/_AboutContent.scss
+++ b/portfolio-app/src/Public/styles/components/_AboutContent.scss
@@ -1,7 +1,11 @@
-
     .about-content{
     font-family: 'Truculenta', sans-serif;
     margin-top:5%;
+    text-align:center;
+    a{
+
+        font-size:25px;
+    }
     h1{
         font-size:40px;
         color:black;
@@ -17,13 +21,13 @@
         border-radius:15px;
         margin-left:30px;
         margin-right:30px;
-        height:70vh;
-        //background-color: rgba(0, 0, 0, 0.918);
-        background-color: white;
+        padding-bottom:30px;
+        background-color: rgb(15,15,15);
         width:60%;
         margin:auto;
+        margin-bottom:40px;
         p{
-            color:black;
+            color:white;
             padding: 15px 15px 15px 15px;
             margin:auto;
             padding-top:30px;
@@ -57,43 +61,7 @@
 
 }
 
-@media(max-width: 1050px){
 
-    .about-content{
-        article{
-        p{
-            font-size:21px;
-        }
-    }
-    }
-
-
-}
-@media(max-width: 926px){
-
-        .about-content{
-            article{
-            p{
-                font-size:20px;
-            }
-        }
-        }
-    
-  
-}
-
-@media(max-width: 830px){
-
-        .about-content{
-            article{
-                p{
-                    font-size:18px;
-                }
-            }
-        }
-    
-  
-}
 @media(max-width: 695px){
 
     .about-content{
@@ -101,37 +69,8 @@
             width:150px;
             height:150px;
         }
-        article{
-            p{
-                font-size:16px;
-            }
-        }
     }
 
 
 }
-@media(max-width: 569px){
-  
-        .about-content{
-           article{
-            p{
-                font-size:14px;
 
-            }
-           }
-               
-        }
-    
-}
-@media(max-width:462px){
-    
-        .about-content{
-            article{
-                p{
-                    font-size:12px;
-                }
-            }
-        
-        }
-    
-    }
