--- a/portfolio-app/src/Public/styles/components/_Burger.scss
+++ b/portfolio-app/src/Public/styles/components/_Burger.scss
@@ -6,16 +6,15 @@
     width:100%;
     height:100%;
     position:relative;
-    border-bottom:1px solid white;
     .burger-btn{
-        background: linear-gradient(60deg, #0d32ad, #62f0e4);
+        background-color: #b1f1fc;
         height:30px;
         width:30px;
         margin-bottom:3%;
         margin-top:3%;
         margin-left:3%;
-        border:2px solid white;
-        border-radius: 20%;
+        // border:2px solid white;
+        // border-radius: 20%;
     }
     .burger-nav{
         background: black;
@@ -23,7 +22,7 @@
         z-index:9;
         top:10;
         width:100%;
-        height:20vh;
+        height:17vh;
         padding-top:5px;
         padding-bottom:10px;
         a{
