--- a/portfolio-app/src/Public/styles/components/_ProjectCard.scss
+++ b/portfolio-app/src/Public/styles/components/_ProjectCard.scss
@@ -1,27 +1,27 @@
 .home-content{
-    height:100vh;
+    height:100%;
     font-family: 'Truculenta', cursive;
     width:100%;
+    flex-wrap:wrap;
+    padding-top:5%;
+    margin-top:30px;
+ 
+    .card{
+        display:flex;
     justify-content: center;
     align-items: center;
-    display:flex;
-    flex-wrap:wrap;
-    align-items: center;
-    margin-top:5%;
-    margin-bottom:30%;
-    padding-bottom:10%;
-    .card{
-        
-        margin-bottom:3%;
-        margin-right:2%;
-        margin-left:2%;
+        width:90%;
+        flex-basis:100%;
+        height:60vh;
+        margin-bottom:15%;
+        margin-left:5%;
+        margin-right:5%;
         perspective: 150rem;
         position: relative;
-        height: 70vh;
-        width:40%;
         .card-front{
             box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-            height: 70vh;
+            flex-basis:100%;
+            height:60vh;
             border-radius: 15px;
             transition: all 0.8s ease;
             backface-visibility: hidden;
@@ -30,43 +30,38 @@
             padding:2rem;
             color: white;
             background-color:white;
-            h2{
-                font-size:40px;
-                text-shadow: 10px -9px 0 white;
-                margin-top:30px;
-                text-align: center;
-                color:black;
-            }
-            p{
-                text-align: center;
-                font-size:20px;
-                color:black;
+            article{
+            
+                h2{
+                    margin-bottom:20px;
+                    font-size:40px;
+                    margin-top:30px;
+                    text-align: center;
+                    color:black;
+                }
+                p{
+                    text-align: center;
+                    font-size:20px;
+                    color:black;
+                }
             }
            
         }
         .card-back{
             box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-            height: 70vh;
+            width:90%;
+            flex-basis:100%;
+            height:60vh;
             border-radius: 15px;
             transition: all 0.8s ease;
             backface-visibility: hidden;
             position: absolute;
-           // bottom: 0px;
             width: 90%;
             padding:2rem;
             color: white;
             transform: rotateY(-180deg);
             background-color: black;
-            p{
-                color:white;
-            }
-            a{
-                color:white;
-                text-decoration: none;
-            }
-            a:hover{
-                color:#62f0e4;
-            }
+           // background-color: pink;
          
         }
     
@@ -84,58 +79,41 @@
     }
 }
 @media(max-width:800px){
-
         .home-content{
             display:flex;
             flex-wrap:wrap;
             align-items: center;
             margin-top:30px;
-            margin-bottom:30%;
-            padding-bottom:10%;
             .card{
                 margin-bottom:15%;
                 width:90%;
                 flex-basis:100%;
-                height:30vh;
+                height:40vh;
                 .card-front{
                     justify-content: center;
                     align-items:center;
-                width:90%;
-                flex-basis:100%;
-                height:30vh;
-                    h2{
-                        width:20%;
-                        display:inline-flex;
-                    }
-                    h3{
-                        width:20%;
-                        display:inline-flex;
-                        color:black;
-                    }
-                    li{
-                        ul{
-                            width:20%;
-                            color:black;
-                            list-style: none;
+                    width:90%;
+                    flex-basis:100%;
+                    height:40vh;
+                    article{
+                        text-align:center;
+                        padding-bottom:15px;
+                        h2{
+                            margin-bottom:20px;
+                            display:inline-flex;
                         }
-                    }
-                    figure{
-                        display: inline-flex;
-                        height:200px;
-                        width:50%;
-                        img{ 
-                            width:100%;
-                            height:100%;
-                            object-fit:cover;
+                        p
+                        {
+
                         }
                     }
                 }
                 .card-back{
                     justify-content: center;
                     align-items:center;
-                width:90%;
-                flex-basis:100%;
-                height:30vh;
+                    width:90%;
+                    flex-basis:100%;
+                    height:40vh;
                 }
             }
         }
@@ -151,17 +129,14 @@
             display:flex;
             justify-content:center;
             align-items: center;
-
+            padding-bottom:20px;
             .card-front{
-                display:flex;
-                justify-content:center;
-                align-items: center;
+            
          
                 width:70%;
             }
             .card-back{
-                justify-content: center;
-                align-items:center;
+        
                 width:70% ;
          
 
@@ -176,31 +151,31 @@
    
         .home-content{
             .card{
-                height:25vh;
+                height:50vh;
                 .card-front{
-                   height:25vh;
+                   height:50vh;
                 }
                 .card-back{
-                    height:25vh;
+                    height:50vh;
 
                 }
             }
         }
     
 }
-@media(max-width:545px){
+// @media(max-width:545px){
    
-    .home-content{
-        .card{
-            height:20vh;
-            .card-front{
-               height:20vh;
-            }
-            .card-back{
-                height:20vh;
+//     .home-content{
+//         .card{
+//             height:20vh;
+//             .card-front{
+//                height:20vh;
+//             }
+//             .card-back{
+//                 height:20vh;
 
-            }
-        }
-    }
+//             }
+//         }
+//     }
 
-}
+// }
