--- a/portfolio-app/src/Public/styles/components/_ProjectTwoCarosel.scss
+++ b/portfolio-app/src/Public/styles/components/_ProjectTwoCarosel.scss
@@ -2,14 +2,17 @@
     font-family: 'Truculenta', sans-serif;
     height: 100%;
         .Card{
+            display:inline-flex;
         .carousel-root{
-            height: 70vh;
-            width: 100%;
+            border:2px solid white;
+            height: 60vh;
+            width: 70%;
                 .carousel{
                     display: none;
                     height: 100%;
                 }
                 .carousel-slider{
+                height:60vh;
                 display: inline-block;
                 .carousel-status{
                     display: none;
@@ -44,5 +47,129 @@
             }
         }
     }
+    .tools-used{
+        margin-left:2%;
+        width:30%;
+        h2{
+            
+        padding-left:2%;
+            font-size:32px;
+            color:black;
+            background-color:#b1f1fc;
+            width:100%;
+            height:50px;
+        }
+        ul{
+            color:white;
+            padding-top:5%;
+            li{
+                font-size:28px;
+                list-style:disc;
+            }
+        }
+    }
 }
+}
+
+@media(max-width:800px){
+    .project-two-carosel{
+        font-family: 'Truculenta', sans-serif;
+        height: 100%;
+            .Card{
+            .carousel-root{
+                height: 40vh;
+                width: 100%;
+                    .carousel{
+                        display: none;
+                        height: 100%;
+                    }
+                    .carousel-slider{
+                    height:40vh;
+                    display: inline-block;
+                    .carousel-status{
+                        display: none;
+                    }
+                    .slider-wrapper{
+                        height: 100%;
+                        width: 100%;
+                    .slider{
+                    width: 100%;
+                        .slide{
+                            height: 200px;
+                        }
+                .selected{
+                width: 100%;
+                height: 100%;
+                div{
+                height: 100%;
+                width: 100%;
+                figure{
+                height: 40vh;
+                margin: 0%;
+                width: 100%;
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    }
+                }
+                }
+            }
+                    }
+                }
+            }
+        }
+    }
+    }
+}
+@media(max-width:630px){
+    .project-two-carosel{
+        font-family: 'Truculenta', sans-serif;
+        height: 100%;
+            .Card{
+            .carousel-root{
+                height: 50vh;
+                width: 100%;
+                    .carousel{
+                        display: none;
+                        height: 100%;
+                    }
+                    .carousel-slider{
+                    height:50vh;
+                    display: inline-block;
+                    .carousel-status{
+                        display: none;
+                    }
+                    .slider-wrapper{
+                        height: 100%;
+                        width: 100%;
+                    .slider{
+                    width: 100%;
+                        .slide{
+                            height: 200px;
+                        }
+                .selected{
+                width: 100%;
+                height: 100%;
+                div{
+                height: 100%;
+                width: 100%;
+                figure{
+                height: 50vh;
+                margin: 0%;
+                width: 100%;
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    }
+                }
+                }
+            }
+                    }
+                }
+            }
+        }
+    }
+    }
 }
