--- a/portfolio-app/src/Public/styles/pages/_Contact.scss
+++ b/portfolio-app/src/Public/styles/pages/_Contact.scss
@@ -1,5 +1,5 @@
 .contact{
-    background-color: rgba(173, 216, 230, 0.63);
+    //background-color: rgba(173, 216, 230, 0.63);
     font-family: 'Truculenta', sans-serif;
     width:100%;
     .contact-content{
@@ -13,33 +13,36 @@
             text-align: center;
         }
         form{
-            background-color: white;
+            background-color: rgb(15, 15, 15);
             padding: 10px 10px 10px 10px;
             border-radius: 15px;
             box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
             margin:auto;
             display:flex;
             flex-wrap:wrap;
-            width:50%;
+            width:60%;
             input{
+                height:40px;
                 flex-basis:100%;
                 margin-left:5px;
                 margin-right:5px;
                 
             }
             textarea{
-                height:50px;
+                height:100px;
                 margin-left:5px;
                 flex-basis:100%;
             }
             label{
-                color:black;
+                color:white;
                 flex-basis:100%;
-                font-size:25px;
+                font-size:30px;
                 margin-left:5px;
+    
             }
             button{
                 flex-basis:100%;
+                height:50px;
                 width:60px;
                 font-size:20px;
                 font-family: 'Truculenta', sans-serif;
@@ -63,6 +66,7 @@
     .contact{
         .contact-content{
             form{
+                width:70%;
                 input{
                     width:90%;
                 }
