projcts page is now mobile friendly

--- a/portfolio-app/src/Public/styles/components/_Banner.scss
+++ b/portfolio-app/src/Public/styles/components/_Banner.scss
@@ -32,6 +32,9 @@
         font-family: 'Shadows Into Light';
         font-style: italic;
     }
+    span{
+        display:none;
+    }
     a{
         color:white;
         text-decoration: none;
