--- a/portfolio-app/src/Public/styles/components/_BackToTop.scss
+++ b/portfolio-app/src/Public/styles/components/_BackToTop.scss
@@ -13,7 +13,7 @@
   left: 15px;
   position:absolute;
   width: 20px;
-  border: 4px solid #fff;
+  border: 2.5px solid black;
   border-radius: 15px;
   transform: rotate(45deg);
 }
@@ -21,7 +21,7 @@
 .arrow-line2{
   position:absolute;
   width: 20px;
-  border: 4px solid #fff;
+  border: 2.5px solid black;
   border-radius: 15px;
   transform: rotate(-45deg);
 }
