--- a/portfolio-app/src/Public/styles/components/_ProjectOneCarosel.scss
+++ b/portfolio-app/src/Public/styles/components/_ProjectOneCarosel.scss
@@ -7,7 +7,7 @@
             .carousel-root{
                 border:2px solid white;
                 height: 60vh;
-                width: 70%;
+                width: 100%;
                     .carousel{
                         display: none;
                         height: 100%;
@@ -44,28 +44,6 @@
                 }
             }
                     }
-                }
-            }
-        }
-
-        .tools-used{
-            margin-left:2%;
-            width:30%;
-            h2{
-                
-            padding-left:2%;
-                font-size:32px;
-                color:black;
-                background-color:#b1f1fc;
-                width:100%;
-                height:50px;
-            }
-            ul{
-                color:white;
-                padding-top:5%;
-                li{
-                    font-size:28px;
-                    list-style:disc;
                 }
             }
         }
@@ -121,7 +99,28 @@
     }
     }
 }
-
+@media(max-width:780px){
+    .project-one-carosel{
+        .Card{
+            .carousel-root{
+                height: 45vh;
+                .carousel-slider{
+                    height: 45vh;
+                }
+                .selected{
+                   
+                    div{
+                    
+                    figure{
+                    height: 45vh;
+                  
+                    }
+                    }
+                }
+            }
+        }
+    }
+}
 @media(max-width:630px){
     .project-one-carosel{
         font-family: 'Truculenta', sans-serif;
