--- a/portfolio-app/src/Public/styles/components/_BouncingArrow.scss
+++ b/portfolio-app/src/Public/styles/components/_BouncingArrow.scss
@@ -1,12 +1,12 @@
 .arrow
 {
-  position: relative;
-  bottom: -15rem;
+ position: absolute;
+  //bottom: -15rem;
+  bottom: -90rem;
   left: 50%;
-  margin-left:-20px;
-  width: 40px;
-  height: 40px;
-
+  margin-left:-25px;
+  width: 50px;
+  height: 50px;
   /**
    * Dark Arrow Down
    */
