--- a/portfolio-app/src/Public/styles/components/_Skills.scss
+++ b/portfolio-app/src/Public/styles/components/_Skills.scss
@@ -15,8 +15,8 @@
             animation-duration: 2s;
             animation-iteration-count: infinite;
             animation-name: icon-bounce;
-           // transform-origin: bottom;   //fixed bug? 
-            animation-timing-function: ease;
+           transform-origin: bottom;  
+            animation-timing-function:ease-in-out;
           }
       }
       @keyframes icon-bounce {
@@ -28,14 +28,14 @@
       }
   }
 
-  @media(max-width:695px){
-      .skills{
-        .skills-content{
-            img{
-                margin-top:5%;
-                justify-content: center;
-                align-items: center;
-            }
-        }
-      }
-  }
+  // @media(max-width:695px){
+  //     .skills{
+  //       .skills-content{
+  //           img{
+  //               margin-top:5%;
+  //               justify-content: center;
+  //               align-items: center;
+  //           }
+  //       }
+  //     }
+  // }
