--- a/portfolio-app/src/Public/styles/pages/_Contact.scss
+++ b/portfolio-app/src/Public/styles/pages/_Contact.scss
@@ -1,12 +1,15 @@
 .contact{
+    height:100vh;
+
     //background-color: rgba(173, 216, 230, 0.63);
     font-family: 'Truculenta', sans-serif;
     width:100%;
-    .contact-content{
-        height:100vh;
+    .contact-content{      display: flex;
+        flex-wrap:wrap;
         h1{
-            margin-top:20px;
-            margin-bottom: 20px;
+            margin-top:5%;
+            margin-bottom:2%;
+            flex-basis:100%;
             font-size:40px;
             color:black;
             text-shadow: -2px -2px 0 white;
@@ -15,12 +18,13 @@
         form{
             background-color: rgb(15, 15, 15);
             padding: 10px 10px 10px 10px;
+            margin-bottom:5%;
             border-radius: 15px;
             box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
             margin:auto;
             display:flex;
             flex-wrap:wrap;
-            width:60%;
+            width:70%;
             input{
                 height:40px;
                 flex-basis:100%;
@@ -65,6 +69,9 @@
 @media(max-width:450px){
     .contact{
         .contact-content{
+            h1{
+                font-size:30px;
+            }
             form{
                 width:70%;
                 input{
