--- a/portfolio-app/src/Public/styles/styles.css
+++ b/portfolio-app/src/Public/styles/styles.css
@@ -2,17 +2,24 @@
 @import url("https://fonts.googleapis.com/css2?family=Truculenta&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap");
 .contact {
+  height: 100vh;
   font-family: 'Truculenta', sans-serif;
   width: 100%;
 }
 
 .contact .contact-content {
-  height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 .contact .contact-content h1 {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 5%;
+  margin-bottom: 2%;
+  -ms-flex-preferred-size: 100%;
+      flex-basis: 100%;
   font-size: 40px;
   color: black;
   text-shadow: -2px -2px 0 white;
@@ -22,6 +29,7 @@
 .contact .contact-content form {
   background-color: #0f0f0f;
   padding: 10px 10px 10px 10px;
+  margin-bottom: 5%;
   border-radius: 15px;
   -webkit-box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
           box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
@@ -31,7 +39,7 @@
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  width: 60%;
+  width: 70%;
 }
 
 .contact .contact-content form input {
@@ -78,6 +86,9 @@
 }
 
 @media (max-width: 450px) {
+  .contact .contact-content h1 {
+    font-size: 30px;
+  }
   .contact .contact-content form {
     width: 70%;
   }
@@ -265,7 +276,7 @@ footer {
   height: 200px;
   width: 100%;
   font-family: 'Truculenta';
-  margin-top: 5%;
+  margin-top: 10%;
 }
 
 footer h1 {
@@ -431,8 +442,10 @@ footer .links a:hover {
           animation-iteration-count: infinite;
   -webkit-animation-name: icon-bounce;
           animation-name: icon-bounce;
-  -webkit-animation-timing-function: ease;
-          animation-timing-function: ease;
+  -webkit-transform-origin: bottom;
+          transform-origin: bottom;
+  -webkit-animation-timing-function: ease-in-out;
+          animation-timing-function: ease-in-out;
 }
 
 @-webkit-keyframes icon-bounce {
@@ -481,18 +494,6 @@ footer .links a:hover {
   }
 }
 
-@media (max-width: 695px) {
-  .skills .skills-content img {
-    margin-top: 5%;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
-
 .home-content {
   height: 100%;
   font-family: 'Truculenta', cursive;
@@ -513,13 +514,12 @@ footer .links a:hover {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  width: 90%;
+  width: 75%;
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
   height: 70vh;
+  margin: auto;
   margin-bottom: 15%;
-  margin-left: 5%;
-  margin-right: 5%;
   -webkit-perspective: 150rem;
           perspective: 150rem;
   position: relative;
@@ -538,15 +538,14 @@ footer .links a:hover {
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
   position: absolute;
-  width: 90%;
   padding: 2rem;
   color: white;
   background-color: white;
 }
 
 .home-content .card .card-front article {
-  margin-bottom: 5px;
   border-bottom: 1px solid #0f0f0f;
+  padding-bottom: 2px;
 }
 
 .home-content .card .card-front article h2 {
@@ -556,13 +555,12 @@ footer .links a:hover {
   margin-bottom: 10px;
   background-color: #0f0f0f;
   width: 100%;
-  font-size: 30px;
+  font-size: 35px;
 }
 
 .home-content .card .card-front article p {
-  margin-bottom: 20px;
   text-align: center;
-  font-size: 18px;
+  font-size: 20px;
   color: black;
 }
 
@@ -576,7 +574,7 @@ footer .links a:hover {
   color: white;
   margin: auto;
   width: 100%;
-  font-size: 20px;
+  font-size: 26px;
   color: black;
 }
 
@@ -585,7 +583,7 @@ footer .links a:hover {
 }
 
 .home-content .card .card-front .tools-used ul li {
-  font-size: 16px;
+  font-size: 20px;
   list-style-type: style auto;
 }
 
@@ -594,7 +592,8 @@ footer .links a:hover {
 }
 
 .home-content .card .card-back {
-  width: 90%;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+          box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
   height: 70vh;
@@ -604,7 +603,6 @@ footer .links a:hover {
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
   position: absolute;
-  width: 90%;
   padding: 2rem;
   color: white;
   -webkit-transform: rotateY(-180deg);
@@ -613,104 +611,35 @@ footer .links a:hover {
   background-color: white;
 }
 
-@media all and (min-width: 769px) {
-  .home-content .card:hover {
-    z-index: 9;
+.home-content .card:hover {
+  z-index: 9;
+}
+
+.home-content .card:hover .card-front {
+  z-index: 9;
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+}
+
+.home-content .card:hover .card-back {
+  z-index: 9;
+  -webkit-transform: rotateY(0deg);
+          transform: rotateY(0deg);
+}
+
+@media (max-width: 1024px) {
+  .home-content .card .card-front article p {
+    font-size: 16px;
   }
-  .home-content .card:hover .card-front {
-    z-index: 9;
-    -webkit-transform: rotateY(180deg);
-            transform: rotateY(180deg);
+  .home-content .card .card-front .tools-used h2 {
+    font-size: 19px;
   }
-  .home-content .card:hover .card-back {
-    z-index: 9;
-    -webkit-transform: rotateY(0deg);
-            transform: rotateY(0deg);
+  .home-content .card .card-front .tools-used ul li {
+    font-size: 15px;
   }
 }
 
 @media (max-width: 800px) {
-  .home-content .card {
-    height: 60vh;
-  }
-  .home-content .card .card-front {
-    display: -webkit-inline-box;
-    display: -ms-inline-flexbox;
-    display: inline-flex;
-    -ms-flex-preferred-size: 50%;
-        flex-basis: 50%;
-    height: 60vh;
-  }
-  .home-content .card .card-front article {
-    border-bottom: none;
-    width: 50%;
-    padding-bottom: 15px;
-  }
-  .home-content .card .card-front article h2 {
-    font-size: 26px;
-  }
-  .home-content .card .card-front article p {
-    font-size: 16px;
-  }
-  .home-content .card .card-front .tools-used {
-    text-align: left;
-    margin-left: 2%;
-    -ms-flex-preferred-size: 50%;
-        flex-basis: 50%;
-    width: 40%;
-  }
-  .home-content .card .card-front .tools-used h2 {
-    padding-top: 10px;
-    margin: auto;
-    margin-left: 20px;
-    width: 100%;
-  }
-  .home-content .card .card-back {
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    width: 90%;
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
-    height: 60vh;
-  }
-}
-
-@media (max-width: 768px) {
-  .home-content .card {
-    margin-bottom: 100px;
-  }
-  .home-content .card .card-front-mobile {
-    z-index: 9;
-    -ms-flex-preferred-size: 100%;
-        flex-basis: 100%;
-    border-radius: 15px;
-    padding: 5px;
-  }
-  .home-content .card .card-front-mobile button {
-    font-family: 'Truculenta', cursive;
-    border-radius: 15%;
-    border: 1px solid white;
-    background-color: #0f0f0f;
-    color: white;
-    font-size: 18px;
-  }
-  .home-content .card .card-front .tools-used button {
-    display: block;
-    margin-top: 40px;
-    margin-left: 20%;
-    font-family: 'Truculenta', cursive;
-    border-radius: 15%;
-    background-color: #0f0f0f;
-    color: white;
-    font-size: 18px;
-  }
-}
-
-@media (max-width: 450px) {
   .home-content .card .card-front article h2 {
     font-size: 20px;
   }
@@ -718,17 +647,32 @@ footer .links a:hover {
     font-size: 14px;
   }
   .home-content .card .card-front .tools-used h2 {
-    font-size: 18px;
+    font-size: 17px;
   }
   .home-content .card .card-front .tools-used ul li {
     font-size: 14px;
   }
-  .home-content .card .card-front .tools-used button {
-    font-size: 14px;
+  .home-content .card .card-back {
+    width: 90%;
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 768px) {
+  .home-content .card .card-front article p {
+    font-size: 13px;
+  }
+  .home-content .card .card-front .tools-used h2 {
+    font-size: 15px;
+  }
+  .home-content .card .card-front .tools-used ul li {
+    font-size: 12px;
+  }
+}
+
+@media (max-width: 540px) {
+  .home-content .card {
+    margin-bottom: 100px;
+  }
   .home-content .card .card-front article h2 {
     font-size: 18px;
   }
@@ -736,13 +680,40 @@ footer .links a:hover {
     font-size: 12px;
   }
   .home-content .card .card-front .tools-used h2 {
-    font-size: 16px;
+    font-size: 14px;
   }
   .home-content .card .card-front .tools-used ul li {
+    font-size: 11px;
+  }
+}
+
+@media (max-width: 460px) {
+  .home-content .card .card-front article h2 {
+    font-size: 16px;
+  }
+  .home-content .card .card-front article p {
+    font-size: 10px;
+  }
+  .home-content .card .card-front .tools-used h2 {
     font-size: 12px;
   }
-  .home-content .card .card-front .tools-used button {
-    font-size: 12px;
+  .home-content .card .card-front .tools-used ul li {
+    font-size: 10px;
+  }
+}
+
+@media (max-width: 370px) {
+  .home-content .card .card-front article h2 {
+    font-size: 16px;
+  }
+  .home-content .card .card-front article p {
+    font-size: 9px;
+  }
+  .home-content .card .card-front .tools-used h2 {
+    font-size: 11px;
+  }
+  .home-content .card .card-front .tools-used ul li {
+    font-size: 9px;
   }
 }
 
@@ -973,11 +944,7 @@ footer .links a:hover {
 
 @media (max-width: 800px) {
   .project-one-carosel .Card .carousel-root {
-    height: 60vh;
     width: 100%;
-  }
-  .project-one-carosel .Card .carousel-root .carousel-slider {
-    height: 60vh;
   }
 }
 
@@ -1057,11 +1024,7 @@ footer .links a:hover {
 
 @media (max-width: 800px) {
   .project-two-carosel .Card .carousel-root {
-    height: 60vh;
     width: 100%;
-  }
-  .project-two-carosel .Card .carousel-root .carousel-slider {
-    height: 60vh;
   }
 }
 
@@ -1141,11 +1104,7 @@ footer .links a:hover {
 
 @media (max-width: 800px) {
   .project-three-carosel .Card .carousel-root {
-    height: 60vh;
     width: 100%;
-  }
-  .project-three-carosel .Card .carousel-root .carousel-slider {
-    height: 60vh;
   }
 }
 
